# learn_rust

./: .gitignore
branches/src/: main.rs
codewars/arry_diff/: Cargo.toml
codewars/arry_diff/src/: main.rs
codewars/fundamentals/build_a_pile_of_cubes/: Cargo.toml
codewars/give_me_a_diamond/src/: main.rs
codewars/sum_of_odd_numbers/src/: main.rs
codewars/write_number_in_expanded_from_v2/: Cargo.toml
codewars/write_number_in_expanded_from_v2/src/: main.rs
fifth_try/: Cargo.toml
first_try/src/: main.rs
for_test_use/: Cargo.toml
for_test_use/src/: lib.rs_  main  main.rs
fourth_try/src/: main.rs
guss_game/: Cargo.toml
guss_game/src/: main.rs
loops/src/: test
macros/src/: main.rs
ms_course/doctests_exercise/src/: lib.rs
ms_course/eighth_try/: Cargo.toml
ms_course/first_try/src/: main.rs
ms_course/fourth_try/: Cargo.toml
ms_course/fourth_try/src/: main.rs
ms_course/nineth_try/: Cargo.toml
ms_course/rutodo/: Cargo.toml
ms_course/rutodo/src/: cli.rs  main.rs  tasks.rs
ms_course/second_try/: Cargo.toml
ms_course/seventh_try/: Cargo.toml
ms_course/seventh_try/src/: main.rs
ms_course/sixth_try/: Cargo.toml
ms_course/tenth_rtry/: Cargo.toml
ms_course/tenth_rtry/src/: lib.rs
ms_course/third_try/: Cargo.toml
official_book/fibo_seq/: Cargo.toml
official_book/function/src/: main.rs
official_book/loops/src/: main.rs
official_book/ownership/src/: main.rs
official_book/ownership2/src/: main.rs
official_book/var/src/: main.rs
official_book/xmas_song/src/: main.rs
second_try/src/: main.rs
strings/src/: main.rs
(+3 files in other folders)
